# kamen-lang

./: CMakeLists.txt  Dockerfile  Makefile  Readme.md  build.sh  clean.sh  codegen.cpp  codegen.h  functions.cpp  functions.h  incorrect_parser.y  lexer.l  parser.y  run.sh  semantic.cpp  semantic.h  syntax.cpp  syntax.h  test.cpp  test.kamen  test.kl  test.txt  types.cpp  types.h
examples/: test.kl
run-env/: Dockerfile  build.sh  docker-compose.yaml
